fix style 'bleeding' use css modules

--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,15 @@ main {
 	z-index: 10;
 }
 
+section {
+	margin: 0.4rem 0;
+}
+
+.MuiTypography-h6 {
+	font-size: 1.2rem;
+	font-weight: 400;
+}
+
 @media (prefers-color-scheme: dark) {
 	body {
 		background-color: #303030;
