--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -11,12 +11,3 @@
 	justify-content: space-between;
 	align-items: baseline;
 }
-
-section {
-	margin: 0.4rem 0;
-}
-
-.MuiTypography-h6 {
-	font-size: 1.2rem;
-	font-weight: 400;
-}
