--- a/src/components/Scanner.module.css
+++ b/src/components/Scanner.module.css
@@ -1,25 +1,16 @@
-html,
-body,
-#root,
-video {
+.wrapper {
 	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
-#root {
-	overflow: hidden;
-}
-
-main {
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-
-video {
+.feed {
 	width: 100%;
+	height: 100%;
 }
 
-#box {
+.box {
 	border-radius: 3px;
 	border: 3px dashed white;
 	position: absolute;
@@ -34,8 +25,8 @@ canvas {
 	display: none;
 }
 
-.MuiFab-root.flash,
-.MuiFab-root.flash:hover {
+.flash,
+.flash:hover {
 	background: #fef6c9;
 	color: #35393c;
 	position: absolute;
